# The_CGame

./: .clang-format  .gitignore  CMakeLists.txt
control_system/: control_panel.c  control_system.h  plot.h
inc/: button.h  main.h  menu.h  test.h  text.h
src/: button.c  main.c  menu.c  test.c  text.c
